# Iterative-Image-Gen

./: .gitignore  README.md
image_gen/inference_time_iterative_refinement/: README.md  environment.yml  pyproject.toml  requirements.txt  setup.sh
image_gen/inference_time_iterative_refinement/configs/: flux_vllm_omni.yaml  gpt_image.yaml  nanobanana.yaml  openrouter_qwen3vl_vlms.yaml  qwen_vllm_omni.yaml
image_gen/inference_time_iterative_refinement/iterative_img_gen/: __init__.py  cli.py  config.py  engine.py  image_providers.py  io_utils.py  prompts.py  schemas.py  vlm_providers.py
image_gen/inference_time_iterative_refinement/scripts/: serve_existing_vllm_omni.sh  setup_vllm_omni.sh  start_qwen_vllm_omni.sh
image_gen/inference_time_iterative_refinement/tests/: test_parsing.py
video_gen/inference_time_iterative_refinement/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.sh
video_gen/inference_time_iterative_refinement/configs/: openrouter_vlms.yaml  qwen3vl_vlms.yaml  smoke_mock.yaml  wan22_univideo_gemini.yaml  wan22_univideo_gpt.yaml  wan_univideo_gemini.yaml  wan_univideo_gpt.yaml
video_gen/inference_time_iterative_refinement/iterative_video_gen/: __init__.py  cli.py  config.py  engine.py  io_utils.py  media_utils.py  prompts.py  schemas.py  video_providers.py  vlm_providers.py
video_gen/inference_time_iterative_refinement/outputs/sample_outputs/: index.json
video_gen/inference_time_iterative_refinement/outputs/sample_outputs/case_1_knight_castle_horse_bird/: plan.json  questions.json  summary.json
video_gen/inference_time_iterative_refinement/scripts/: check_servers.sh
video_gen/inference_time_iterative_refinement/tests/: test_engine.py  test_parsing.py
(+47 files in other folders)
